--- a/css/3flowpro.webflow.css
+++ b/css/3flowpro.webflow.css
@@ -3216,6 +3216,8 @@ body {
 }
 
 .flex-horizontal.start-top.diff {
+  grid-column-gap: 0vw;
+  grid-row-gap: 0vw;
   border-bottom-style: none;
 }
 
